crates/solidity/testing/snapshots/bindings_output/contracts/constructor_call_parent/v2/generated/0.4.11-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Parse errors:
Error: Expected ConstantKeyword or Identifier or InternalKeyword or PrivateKeyword or PublicKeyword.
   ╭─[input.sol:4:16]
   │
 4 │ ╭─▶     constructor() Base() {
 5 │ ├─▶     }
   │ │           
   │ ╰─────────── Error occurred here.
───╯

------------------------------------------------------------------------

Definitions (2):
- Def: #1 ["Base" @ input.sol:1:10] (contract)
- Def: #2 ["Test" @ input.sol:3:10] (contract)

------------------------------------------------------------------------

References (1):
- Ref: ["Base" @ input.sol:3:18] -> #1

------------------------------------------------------------------------

Unbound identifiers (1):
- ???: ["constructor" @ input.sol:4:5]

------------------------------------------------------------------------

Bindings: 
   ╭─[input.sol:1:1]
   │
 1 │ contract Base {}
   │          ──┬─  
   │            ╰─── name: 1
   │ 
 3 │ contract Test is Base {
   │          ──┬─    ──┬─  
   │            ╰─────────── name: 2
   │                    │   
   │                    ╰─── ref: 1
 4 │     constructor() Base() {
   │     ─────┬─────  
   │          ╰─────── ???
───╯
